background overflow fixed and styled scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #FBFF1B;
+  border-radius: 20px;
+  border: 1px solid yellow;
+  height: 15px;
+}
+
+
